assets/style.css
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;

}
html{
    scroll-behavior: smooth;
    /* faz uma rolagem suavem, porem não funciona em todos os navegadores */
    font-size: 62.5%;
}
:root{
    --color-orange:#FDAF2D;
    --color-black:#2c3e50;
    --color-gray:#a3a3a3;
    --color-des:#34495e;
    --color-white:#ffffff;
    --color-section: #f2f2f2;

    --font-primary: "Montserrat", sans-serif;
    --font-secondary: "Plus Jakarta Sans", sans-serif;
    --font-accent: "Plus Jakarta Sans", sans-serif;

}
body {
    overflow-x: hidden;
    font-size: 1.5rem;
    font-family: var(--font-secondary);
    

}

header {
    background: rgba(255, 255, 255, 0);
    z-index: 10;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

.header {
    font-family: var(--font-primary);
    max-width: 114rem;
    padding-left:1rem ;
    padding-right: 1rem;
    height: 100px;
    box-sizing: border-box;
    margin: auto;
    display: flex;
    align-items: center;
}

.logo {
    display: flex;
    width: 10rem;
    margin-left: 1rem;
}
.logo img{
    width: 20rem;
    height: auto;
}

/* MENU DO HEADER */
.menu-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    z-index: 999;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.4s ease, visibility 0.4s ease;
}

.menu-overlay.active {
    opacity: 1;
    visibility: visible;
}

.menu {
    flex: 1;
    display: flex;
    justify-content: flex-end;
    color: var(--color-black);
    
}

.menu ul,
.menu li {
    list-style: none;
}

.menu ul {
    display: flex;
}

.menu li a {
    color: var(--color-white);
    text-transform: uppercase;
    font-weight: 600;
    text-decoration: none;
    display: flex;
    align-items: center;
    padding-left: 1rem;
    padding-right: 1rem;
    height: 100px;
    box-sizing: border-box;
    border-bottom: 5px solid #00000000;
    font-size: 1.6rem;

}

.menu li a:hover {
    border-bottom: 5px solid var(--color-orange);
    color: var(--color-orange);
}


.menu .active a{
    border-bottom: 5px solid var(--color-orange);
    color: var(--color-orange);
}
#btn-menu {
    display: none;
    cursor: pointer;
}

/* SLIDERSHOW */


/* BANNER */
.sliders {
    height: 100vh;
    display: block;
    overflow: hidden;
    position: relative;
    z-index: 1;
    margin: 0;
    padding: 0;

}
.slide-fixo{
    
}
#bg-escuro{
    background-color: rgba(0, 0, 0, 0.8);
    width: 100%;
    height: 100%;
    
}
.slider--width {
    height: 100%;
    display: flex;
    transition: all ease 0.5s;
    margin: 0;
    padding: 0;
}

.slide--item {
    flex: 0 0 auto;
    height: inherit;
    background-position: center;
    background-size: cover;
    display: flex;
    /* justify-content: center; */
    align-items: center;
    

}
/* BOTÃO DO SLIDER */
.slider-controls {
    position: absolute;
    z-index: 100;
    height: 100vh;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    pointer-events: none;
}

.slider-controls .slide-control svg{
    width: 2rem;
    height:auto;
    color:var(--color-white);
    pointer-events: none;
}


.slider-controls .slide-control {
    width: 3rem;
    height: 6rem;
    background-color:transparent;
    border: 2px solid var(--color-white);
    display: flex;
    justify-content: center; /* Centraliza no eixo horizontal */
    align-items: center;    /* Centraliza no eixo vertical */
    margin: 0 1%;
    border-radius: 10%;
    pointer-events: auto;
    cursor: pointer;
}

.slider-controls .slide-control:hover {
    background-color: #df8d00;
}

.slider-controls .slide-control:hover svg {
    color: #f3f1f1; /* O SVG muda de cor ao passar o mouse na área do slide-control */
}
.slider--width .item-container {
    display: flex;
    max-width: 60%;
    margin: auto;
    flex-direction: column;
    


}

.slider--width .item-container h1 {
    font-size: 6rem;
    color: var(--color-white);
    margin-bottom: 1rem;
    font-family: var(--font-primary); 
}
.slider--width .item-container span{
    color: #FDAF2D;
}
.slider--width .item-container p {
    color: var(--color-white);
    font-size: 1.8rem;
    font-family: var(--font-secondary);
    

}

.slide--item .bg-escuro {
    background-color: rgba(0, 0, 0, 0.8);
    width: 100%;
    height: 100%;
    display: flex;
}

.slider-indicators {
    width: 100%;
    position: absolute;
    bottom: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    list-style: none;
    padding: 0;
    margin-bottom: 2rem;

}

.indicator {
    display: inline-block;
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 50%;
    background-color: var(--color-white);
    margin: 0 5px;
    cursor: pointer;
}

.indicator.active {
    background-color: var(--color-orange);
}

/* BOTÃO DE ROLAGEM */
#back-to-top {
    position: fixed;
    bottom: 2rem;
    right: 2rem;
    background-color:#FDAF2D;
    color: white;
    border: none;
    border-radius: 50%;
    width: 5rem;
    height: 5rem;
    cursor: pointer;
    
    justify-content: center;
    align-items: center;
    transition: background-color 0.3s ease;
    z-index: 1000;
    position: fixed !important;
    bottom: 3rem !important;
    right: 3rem !important;
    z-index: 9999 !important;
    opacity: 0;
    visibility: hidden;
    transform: translateY(20px);
    transition: all 0.3s ease !important;
    display: flex !important;
}
#back-to-top:hover {
    background-color:#df8d00;
}
#back-to-top svg {
    width: 4rem;
    height: 4rem;
}

/* section 1 */
.menu-icon{
    
}
.menu-icon .section-body{
    max-width: 114rem;
    margin: auto;
    min-width: 10rem;
    
}
.menus-containes {
    display: flex;
    align-items: center;
    justify-content: space-around;
   
}
/* ... */

